Implement LASSO for real data.

--- a/notebooks/Prostate_experiments.ipynb
+++ b/notebooks/Prostate_experiments.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "d672002b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Librairies"
    ]
@@ -80,7 +82,7 @@
     "\n",
     "from sklearn.decomposition import PCA, SparsePCA\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LogisticRegression, Lasso\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.naive_bayes import GaussianNB, BernoulliNB, CategoricalNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -230,7 +232,8 @@
     "               \"k-best\", \n",
     "               \"k-best-mi\",     # new \n",
     "               ###\"pca\", \n",
-    "               \"sparse-pca\", \n",
+    "               \"sparse-pca\",\n",
+    "               ### \"lasso\",\n",
     "               ###\"lfs\", \n",
     "               ###\"lbs\", \n",
     "              ]"
@@ -344,6 +347,16 @@
     "    y_test_split = label_encoder.transform(y_test_split)\n",
     "    y_test_split = 2 * y_test_split - 1\n",
     "\n",
+    "    if fts_mode == \"lasso\": # supervised\n",
+    "        lasso = Lasso(alpha=1e-3) # empirical value...\n",
+    "        lasso.fit(X_train_split, y_train_split)\n",
+    "        coeffs = lasso.coef_[lasso.coef_ != 0]\n",
+    "        coeffs = np.abs(coeffs)\n",
+    "        coeffs = np.sort(coeffs)[-nb_fts:]\n",
+    "        lasso_idx = np.argwhere(np.abs(lasso.coef_) >= coeffs[0]).reshape(-1)\n",
+    "        X_train_split = X_train_split[:, lasso_idx]\n",
+    "        X_test_split = X_test_split[:, lasso_idx]\n",
+    "        \n",
     "    if fts_mode == \"pca\": # unsupervised\n",
     "        pca = PCA(n_components=min(nb_fts, len(X_train_split))) # PCA limited by nb of rows of X (64)\n",
     "        X_train_split = pca.fit_transform(X_train_split)\n",
