Fix results folder path.

--- a/notebooks/LEUKEMIA_experiments.ipynb
+++ b/notebooks/LEUKEMIA_experiments.ipynb
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_folder = f\"results/genetic_data_LEUKEMIA/{nb_fts}\" # separate folder for any nb_fts\n",
+    "results_folder = f\"../results/LEUKEMIA/{nb_fts}\" # separate folder for any nb_fts\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
     "    os.mkdir(results_folder)"
