--- a/notebooks/DLBCL_experiments.ipynb
+++ b/notebooks/DLBCL_experiments.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_folder = f\"results/genetic_data_DLBCL/{nb_fts}\" # separate folder for any nb_fts\n",
+    "results_folder = f\"../results/DLBCL/{nb_fts}\" # separate folder for any nb_fts\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
     "    os.mkdir(results_folder)"
