--- a/notebooks/Prostate_experiments.ipynb
+++ b/notebooks/Prostate_experiments.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_folder = f\"results/genetic_data_Prostate/{nb_fts}\" # separate folder for any nb_fts\n",
+    "results_folder = f\"../results/Prostate/{nb_fts}\" # separate folder for any nb_fts\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
     "    os.mkdir(results_folder)"
